syntax = "proto3";

package teleport.terminal.v1;

option go_package = "github.com/gravitational/teleport/lib/teleterm/v1";

import "v1/label.proto";

// App describes connected AAP Application
message App {
    // uri is the kube resource URI
    string uri = 1;
    // name is the kube name
    string name = 2;
    // description is the app description.
    string description = 3;
    // uri is the internal address the application is available at.
    string app_uri = 4;
    // publicaddr is the public address the application is accessible at.
    string public_addr = 5;
    // fqdn is a fully qualified domain name of the application (app.example.com)
    string fqdn = 6;
    // cluster_id is this app cluster ID
    string cluster_id = 7;
    // labels is a map of static labels associated with an application.
    repeated Label labels = 8;
    // aws_console if true, indicates that the app represents AWS management console.
    bool aws_console = 9;
    // aws_roles is a list of AWS IAM roles for the application representing AWS console.
    repeated AWSRole aws_roles = 10;

    message AWSRole {
        // display is the role display name.
        string display = 1;
        // arn is the full role ARN.
        string arn = 2;
    }
}
